<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>VMonoCalibrationDialog</class>
 <widget class="QDialog" name="VMonoCalibrationDialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>660</width>
    <height>550</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Calibrate single camera</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="VVideoWidget" name="m_videoWidget" native="true"/>
   </item>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QLineEdit" name="m_fpsEdit"/>
     </item>
     <item>
      <widget class="QPushButton" name="m_fpsButton">
       <property name="text">
        <string>Change FPS</string>
       </property>
      </widget>
     </item>
     <item>
      <spacer name="horizontalSpacer">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
     <item>
      <widget class="QPushButton" name="m_useButton">
       <property name="enabled">
        <bool>false</bool>
       </property>
       <property name="text">
        <string>Use</string>
       </property>
      </widget>
     </item>
     <item>
      <spacer name="horizontalSpacer_2">
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
     <item>
      <widget class="QPushButton" name="m_changeButton">
       <property name="text">
        <string>Change camera</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="m_startButton">
       <property name="enabled">
        <bool>false</bool>
       </property>
       <property name="text">
        <string>Start</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="m_stopButton">
       <property name="enabled">
        <bool>false</bool>
       </property>
       <property name="text">
        <string>Stop</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>VVideoWidget</class>
   <extends>QWidget</extends>
   <header>vvideowidget.h</header>
  </customwidget>
 </customwidgets>
 <tabstops>
  <tabstop>m_useButton</tabstop>
  <tabstop>m_startButton</tabstop>
  <tabstop>m_stopButton</tabstop>
  <tabstop>m_changeButton</tabstop>
  <tabstop>m_fpsEdit</tabstop>
  <tabstop>m_fpsButton</tabstop>
 </tabstops>
 <resources/>
 <connections/>
</ui>
